Backend ve Frontend bağlantısı yapıldı.

--- a/pages/main.html
+++ b/pages/main.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../assets/bootstrap.min.css" />
-    <script src="https://unpkg.com/vue@next"></script>
     <link rel="stylesheet" href="../assets/style.css" />
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
     <div id="app">
@@ -21,13 +21,13 @@
         </div>
         <h3 class="text-center mt-5 mb-3">Yapılacaklar Listesi</h3>
         <div class="row">
-          <div class="bg-purple p-2 mb-3 text-light bg-dark col-md-8 offset-2 shadow card d-flex justify-content-center flex-row align-items-center">
-            <p class="m-0 w-100">Bu bir yapılacak listesidir....</p>
-            <button class="btn btn-sm btn-outline-warning flex-shrink-1 mr-1">Düzenle</button>
-            <button class="btn btn-sm btn-outline-danger flex-shrink-1">X</button>
+          <div v-for="todo in todoListMain" class="bg-purple p-2 mb-3 text-light bg-dark col-md-8 offset-2 shadow card d-flex justify-content-center flex-row align-items-center">
+            <p class="m-0 w-100">{{ todo.text }}</p>
+            <button @click="removeTodo(todo)" class="btn btn-sm btn-outline-danger flex-shrink-1">X</button>
           </div>
         </div>
       </div>
     </div>
+    <script src="mainWindow.js"></script>
   </body>
 </html>
