--- a/pages/newTodo.html
+++ b/pages/newTodo.html
@@ -13,7 +13,7 @@
     <div id="app" class="update-container container-fluid d-flex flex-column justify-content-center align-items-center">
       <div class="card shadow pt-2 pb-2" style="width: 30rem">
         <div class="card-body">
-          <h5 class="card-title">Kaydı Düzenle</h5>
+          <h5 class="card-title">Yeni TODO</h5>
           <input v-model="newTodo" type="text" class="form-control mt-3 mb-3" placeholder="Ex. Go to School" />
           <a href="#" class="card-link btn btn-sm btn-outline-danger" @click="cancelWindow">Vazgeç</a>
           <a href="#" class="card-link btn btn-sm btn-outline-success" @click="saveTodo">Kaydet</a>
@@ -35,7 +35,7 @@
             ipcRenderer.send("newTodo:close", true);
           },
           saveTodo() {
-            alert("Başarıyla kaydedildi");
+            ipcRenderer.send("newTodo:save", this.newTodo);
           },
         },
       }).mount("#app");
