--- a/pages/main.html
+++ b/pages/main.html
@@ -15,15 +15,20 @@
         <h3 class="text-center">ElectronJS & VueJS 3 ile ToDo APP</h3>
         <div class="row">
           <div class="col-md-6 offset-3 mt-5 d-flex">
-            <input type="text" class="form-control form-control-lg mr-1" />
-            <button class="btn btn-outline-dark">Ekle</button>
+            <input @keydown.enter="addTodo($event)" type="text" class="form-control form-control-lg mr-1" />
+            <button @click="addTodo" class="btn btn-outline-dark">Ekle</button>
           </div>
         </div>
         <h3 class="text-center mt-5 mb-3">Yapılacaklar Listesi</h3>
-        <div class="row">
+        <div v-if="todoListMain.length > 0" class="row">
           <div v-for="todo in todoListMain" class="bg-purple p-2 mb-3 text-light bg-dark col-md-8 offset-2 shadow card d-flex justify-content-center flex-row align-items-center">
             <p class="m-0 w-100">{{ todo.text }}</p>
             <button @click="removeTodo(todo)" class="btn btn-sm btn-outline-danger flex-shrink-1">X</button>
+          </div>
+        </div>
+        <div v-else class="alert-container row">
+          <div class="alert alert-warning mb-3 col-md-8 offset-2">
+            <b>Herhangi bir TODO bulunmamaktadır</b>
           </div>
         </div>
       </div>
